# QandD-Rust-Income

./: Cargo.toml  README.md
my-project/: Cargo.toml
src/: main.rs
ui/: appwindow.slint
